lib/src/compiler/tests/testdata/errors/56.out
error[E100]: wrong type
 --> line:4:5
  |
4 |     test_proto2(1)
  |     ^^^^^^^^^^^ expression should be `function`, but is `struct`
  |